@@ -111,6 +111,28 @@ def GetAMIClient():
     amiclient=AMI(False)
     return amiclient
 
+#-------------------------------
+def GetAMIClientReplica():
+    try:
+        from pyAMI.pyAMI import AMI
+    except AMI_Error:
+        print "WARNING unable to import AMI, maybe because of temporary AMI unavailability. Trying again..."
+        from pyAMI.pyAMI import AMI        
+    except ImportError:
+        print "WARNING unable to import AMI from pyAMI with standard $PYTHONPATH."
+        print "Will manually add ZSI and 4suite, then try again..."
+        import sys
+        sys.path.insert(0,'/afs/cern.ch/atlas/offline/external/ZSI/2.1-a1/lib/python')
+        sys.path.insert(0,'/afs/cern.ch/sw/lcg/external/4suite/1.0.2_python2.5/slc4_ia32_gcc34/lib/python2.5/site-packages')
+        from pyAMI.pyAMI import AMI
+        print "import pyAMI was succesful"
+
+    print "INFO Get AMI info from CERN replica"
+    from pyAMI.pyAMIEndPoint import pyAMIEndPoint
+    pyAMIEndPoint.setType("replica")
+    amiclient=AMI(False)
+    return amiclient
+
 #------------------------------------
 def BuildDicFromCommandLineIgnoreAMI(sysArgv):
     if SysArgsExceptionCatcher(sysArgv) is "Help":
@@ -191,7 +213,16 @@ def GetInfoFromAMIPython(amitag):
     #get dics from AMI
     amiclient=GetAMIClient()
     l=['ListConfigurationTag','configTag='+amitag]
-    result=amiclient.execute(l)
+
+    try:
+        result=amiclient.execute(l)
+    except AMI_Error:
+        print "WARNING problem in amiclient.execute, try using CERN replica instead"
+        amiclient=GetAMIClientReplica()
+        result=amiclient.execute(l)
+    except AMI_Error:
+        print "FATAL could not execute AMI-command, gonna crash now..."
+        
     dicOfDico=result.getDict()
     #configuration is a python dic in string format, get back to real python using exec 
     strDic=dicOfDico[u'rowset_'+amitag][u''+amitag][u'phconfig']
